# divenibot

./: .gitignore  README.md  main.py  model.py  pyproject.toml  requirements-dev.txt  requirements.txt  service.py  teclados.py  utils.py
diveni/: main.py  service.py  utils.py
tests/: test_classes.py
