[tool.poetry]
name = "divenibot"
version = "0.1.0"
description = "Bot Telegram que oferece recursos para os jogadores do Palpites realizarem seus palpites."
authors = ["Claudio Torcato <claudiotorcato@gmail.com>"]
readme = "README.md"
packages = [{include = "diveni"}]

[tool.poetry.scripts]
divenibot = "diveni.main:main"

[tool.poetry.dependencies]
python = "^3.10"
Pyrogram = "^2.0.102"
python-dotenv = "^1.0.0"
TgCrypto = "^1.2.5"
orator = "^0.9.9"

[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
taskipy = "^1.10.4"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
isort = "^5.12.0"


[tool.poetry.group.doc.dependencies]
mkdocstrings = "^0.21.2"
mkdocstrings-python = "^0.9.0"
mkdocs-material = "^9.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"